estilos.css
:root {
  --color1: #303e2d;
  --color2: #000000;
  --color3: #ffffff;
  --matrixBgTransition: background-color 2.8s ease-in-out;
  --matrixOpTransition: opacity 2.8s ease-in-out;
}

::-webkit-scrollbar {
  width: 1vw;
}
::-webkit-scrollbar-track {
  background: grey;
}
::-webkit-scrollbar-thumb {
  background: rgb(255, 255, 255);
}
::-webkit-scrollbar-thumb:hover {
  background: #000000;
}
html {
  scroll-behavior: smooth;
  line-height: 2rem;
}

#matrix-bg {
  z-index: 0;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  object-fit: cover;
  z-index: 1;
  transition: var(--matrixOpTransition);
  opacity: 0;
}

#matrix2-bg {
  z-index: 0;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  object-fit: cover;
  z-index: 1;
  transition: var(--matrixOpTransition);
  opacity: 0;
}

#quote-mode {
  position: fixed;
  display: none;
  top: 50vh;
  left: 50vw;
  transform: translate(-50%, -50%);
  width: 800px;
  height: 400px;
  z-index: 7;
}

#mobile-quote-mode-bkg-intro {
  display: none;
  opacity: 80%;
}

#quote-mode-bkg-intro {
  position: absolute;
  display: none;
  opacity: 80%;
  width: 100%;
  top: 0;
  z-index: 1;
}

header {
  height: 10vh;
  background-color: var(--color1);
  display: flex;
  justify-content: center;
  align-items: center;
  color: var(--color3);
  z-index: 1;
  position: relative;
  transition: var(--matrixBgTransition);
}

body {
  margin: 0;
  font-family: 'Open Sans', sans-serif;
  text-wrap: balance;
  user-select: none;
  background-color: var(--color2);
}

section {
  position: relative;
}

div {
  box-sizing: border-box;
}

#red-pill {
  display: none;
  width: 80px;
  height: 80px;
  position: absolute;
  z-index: 20;
  top: 92px;
  left: 22px;
}

#change-button {
  cursor: pointer;
  font-size: 25px;
  position: absolute;
  top: 50px;
  left: 50px;
  background: none;
  z-index: 5;
}

#suggestive-finger1-wrapper {
  position: absolute;
  z-index: 5;
  top: 120px;
  left: 100px;
  transform: rotate(335deg);
}

#suggestive-finger1 {
  opacity: 0;
  font-size: 80px;
}

#suggestive-arrow-wrapper {
  position: absolute;
  top: 46px;
  right: 110px;
  transform: rotate(90deg);
  z-index: 6;
}

#audio-toggle {
  cursor: pointer;
  outline: 0;
  border: 0;
  border-radius: 50%;
  font-size: 25px;
  position: absolute;
  top: 50px;
  right: 50px;
  background: none;
  z-index: 5;
}

#music-toggle {
  display: none;
  cursor: pointer;
  font-size: 25px;
  position: absolute;
  top: 100px;
  right: 50px;
  z-index: 5;
}

#seccion-presentacion {
  width: 100%;
  display: flex;
  flex-direction: row;
  justify-content: center;
  height: 90vh;
  background-color: var(--color2);
  color: white;
}

#caja-central {
  margin: auto;
  width: 600px;
  height: 300px;
  display: flex;
  flex-direction: row;
  border-radius: 20px;
  overflow: hidden;
  z-index: 1;
}

#caja-fondo {
  background-color: var(--color1);
  width: 100%;
  height: 100%;
  position: absolute;
  transition: var(--matrixOpTransition);
}

#caja-cara {
  position: relative;
  display: flex;
  width: 40%;
}

#caja-cara img {
  position: absolute;
  height: 100%;
  transition: opacity 2.8s ease-in-out, box-shadow 100ms ease-in-out;
}

img#profile-pic {
  z-index: 1;
}

#caja-fondo-mobile {
  display: none;
}

img#matrix {
  z-index: -1;
}

#caja-presentacion {
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 60%;
  color: var(--color3);
  padding: 28px 30px 30px 25px;
  line-height: 3.5vh;
  text-align: center;
  transition: var(--matrixBgTransition);
  z-index: 0;
}

.fa-chevron-down {
  padding: 30px 50px 10px;
  font-size: 1em;
  color: var(--color3);
  position: absolute;
  bottom: 20px;
  cursor: pointer;
  z-index: 5;
}

#seccion-aptitudes {
  background-color: var(--color2);
  height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  color: var(--color3);
  text-wrap: balance;
  z-index: 1;
  transition: var(--matrixBgTransition);
}

#seccion-aptitudes > p:nth-of-type(1) {
  text-align: center;
}

#seccion-tecnologias {
  background-color: var(--color1);
  height: fit-content;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 3% 21%;
  z-index: 1;
  transition: var(--matrixBgTransition);
}

#tech-list {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  gap: 20px;
}

.tech {
  height: 6rem;
  margin: 1.5rem;
}

#seccion-cpe {
  background-color: var(--color2);
  color: var(--color3);
  padding-top: 20px;
  padding-bottom: 50px;
  text-align: center;
  z-index: 1;
  transition: var(--matrixBgTransition);
}

#seccion-cpe h2 {
  margin: 50px 0;
}

.cpe {
  width: 85%;
  display: grid;
  grid-template-columns: 10fr 1fr 10fr 1fr 10fr;
  margin: auto;
  padding-top: 10px;
}

.card {
  display: grid;
  grid-template-rows: 10% 80% 10%;
  text-align: center;
  align-items: center;
  width: 100%;
  /* border: solid var(--color-oscuro) 1px; */
  border-radius: 10px;
  padding: 10px;
  /* margin-bottom: 40px; */
  gap: 3px;
}

.card img {
  width: 100%;
}

.card a,
footer a {
  color: var(--color3);
}

.red-social {
  height: 3.75rem;
  border-radius: 10px;
  margin: 0 40px;
}

#msje-condicional {
  z-index: 1;
}

#msje-condicional div {
  display: flex;
  justify-content: center;
  align-items: center;
  color: var(--color2);
  background-color: #ffffff;
}

#a-ver {
  margin-left: 1rem;
  height: 2rem;
  width: 4rem;
  cursor: pointer;
}

footer {
  background-color: var(--color1);
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  color: var(--color3);
  font-weight: lighter;
  height: 25vh;
  padding-bottom: 30px;
  position: relative;
  z-index: 1;
  transition: var(--matrixBgTransition);
}

#contacto {
  margin-bottom: 30px;
}

#contacto-links {
  width: 55%;
  display: flex;
  justify-content: center;
  padding: 10px 0 25px 0;
  & a {
    margin: 0 -30px 0 -30px;
  }
}

#scroll-to-top {
  position: absolute;
  top: 50%;
  right: 15%;
  cursor: pointer;
  padding: 10px;
}

@media (max-width: 630px) {
  #quote-mode {
    top: 50vh;
    left: 50vw;
    transform: translate(-50%, -50%);
    width: 90vw;
    height: 50vw;
    z-index: 7;
  }

  #mobile-quote-mode-bkg-intro {
    position: absolute;
    width: 100%;
    top: 10vh;
    display: none;
    z-index: 1;
  }

  #quote-mode-bkg-intro {
    top: 10vh;
  }

  #seccion-presentacion {
    height: 90svh;
  }

  #suggestive-finger1-wrapper {
    position: absolute;
    z-index: 5;
    top: 120px;
    left: 57px;
    transform: rotate(0deg);
  }

  #suggestive-finger1 {
    opacity: 0;
    font-size: 50px;
  }

  #change-button {
    padding: 25px;
    top: 25px;
    left: 25px;
  }

  #audio-toggle {
    padding: 25px;
    top: 25px;
    right: 25px;
  }

  #suggestive-arrow {
    top: 100px;
    right: 51px;
  }

  #caja-central {
    overflow: visible;
    height: fit-content;
    flex-direction: column;
    box-shadow: 0 0 20px 10px rgba(0, 0, 0, 0); /*para pisar el otro */
  }

  #caja-fondo {
    display: none;
  }

  #caja-cara {
    height: 30vh;
    width: 30vh;
    margin-top: 50px;
    margin: auto;
    overflow: hidden;
    border-radius: 200px;
    transition: opacity 2.8s ease-in-out, box-shadow 100ms ease-in-out;
    justify-content: center;
  }

  #caja-fondo-mobile {
    display: block;
    background-color: var(--color1);
    position: absolute;
    justify-content: center;
    border-radius: 200px;
    width: 100%;
    height: 100%;
    transition: var(--matrixOpTransition);
  }

  #caja-presentacion {
    width: 100%;
    background-color: var(--color-oscuro);
    color: var(--color-claro);
    text-align: center;
    padding: 20px 5% 42px;
  }

  .fa-chevron-down {
    bottom: 10px;
  }

  #seccion-aptitudes > p:nth-of-type(1) {
    text-align: left;
    text-wrap: wrap;
  }

  #tech-list {
    padding: 0;
    flex-wrap: wrap;
    flex-basis: 30%;
  }

  .tech {
    height: 3.5rem;
  }

  #seccion-aptitudes {
    height: fit-content;
    padding: 5%;
    padding-bottom: 10%;
  }

  #seccion-tecnologias {
    padding: 0;
    margin: 0;
    height: fit-content;
    padding: 10% 0;
  }

  #seccion-cpe {
    height: fit-content;
    display: flex;
    justify-content: flex-start;
    flex-direction: column;
    align-items: center;
    padding-top: 10px;
  }

  .cpe {
    width: 100%;
    display: flex;
    flex-direction: column;
    padding: 10px 5px;
    gap: 20px;
  }

  .card {
    text-align: center;
    width: 100%;
    border-radius: 10px;
    padding: 10px;
  }

  .card h3 {
    margin-bottom: 10%;
  }

  #msje-condicional div {
    flex-direction: column;
    justify-content: center;
    text-align: center;
    padding: 0 1rem 0rem 1rem;
  }

  #a-ver {
    margin-bottom: 1.7rem;
  }

  footer {
    height: 25vh;
  }

  #contacto {
    margin-bottom: 40px;
  }

  .red-social {
    height: 3rem;
  }

  #scroll-to-top {
    top: 50px;
    right: 50px;
    padding: 10px;
  }
}

